set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt5 COMPONENTS Core Network REQUIRED)

add_library(QtAwsAppConfig
  appconfigclient.h
  appconfigclient_p.h
  appconfigrequest.h
  appconfigrequest_p.h
  appconfigresponse.h
  appconfigresponse_p.h
  createapplicationrequest.h
  createapplicationrequest_p.h
  createapplicationresponse.h
  createapplicationresponse_p.h
  createconfigurationprofilerequest.h
  createconfigurationprofilerequest_p.h
  createconfigurationprofileresponse.h
  createconfigurationprofileresponse_p.h
  createdeploymentstrategyrequest.h
  createdeploymentstrategyrequest_p.h
  createdeploymentstrategyresponse.h
  createdeploymentstrategyresponse_p.h
  createenvironmentrequest.h
  createenvironmentrequest_p.h
  createenvironmentresponse.h
  createenvironmentresponse_p.h
  createhostedconfigurationversionrequest.h
  createhostedconfigurationversionrequest_p.h
  createhostedconfigurationversionresponse.h
  createhostedconfigurationversionresponse_p.h
  deleteapplicationrequest.h
  deleteapplicationrequest_p.h
  deleteapplicationresponse.h
  deleteapplicationresponse_p.h
  deleteconfigurationprofilerequest.h
  deleteconfigurationprofilerequest_p.h
  deleteconfigurationprofileresponse.h
  deleteconfigurationprofileresponse_p.h
  deletedeploymentstrategyrequest.h
  deletedeploymentstrategyrequest_p.h
  deletedeploymentstrategyresponse.h
  deletedeploymentstrategyresponse_p.h
  deleteenvironmentrequest.h
  deleteenvironmentrequest_p.h
  deleteenvironmentresponse.h
  deleteenvironmentresponse_p.h
  deletehostedconfigurationversionrequest.h
  deletehostedconfigurationversionrequest_p.h
  deletehostedconfigurationversionresponse.h
  deletehostedconfigurationversionresponse_p.h
  getapplicationrequest.h
  getapplicationrequest_p.h
  getapplicationresponse.h
  getapplicationresponse_p.h
  getconfigurationprofilerequest.h
  getconfigurationprofilerequest_p.h
  getconfigurationprofileresponse.h
  getconfigurationprofileresponse_p.h
  getconfigurationrequest.h
  getconfigurationrequest_p.h
  getconfigurationresponse.h
  getconfigurationresponse_p.h
  getdeploymentrequest.h
  getdeploymentrequest_p.h
  getdeploymentresponse.h
  getdeploymentresponse_p.h
  getdeploymentstrategyrequest.h
  getdeploymentstrategyrequest_p.h
  getdeploymentstrategyresponse.h
  getdeploymentstrategyresponse_p.h
  getenvironmentrequest.h
  getenvironmentrequest_p.h
  getenvironmentresponse.h
  getenvironmentresponse_p.h
  gethostedconfigurationversionrequest.h
  gethostedconfigurationversionrequest_p.h
  gethostedconfigurationversionresponse.h
  gethostedconfigurationversionresponse_p.h
  listapplicationsrequest.h
  listapplicationsrequest_p.h
  listapplicationsresponse.h
  listapplicationsresponse_p.h
  listconfigurationprofilesrequest.h
  listconfigurationprofilesrequest_p.h
  listconfigurationprofilesresponse.h
  listconfigurationprofilesresponse_p.h
  listdeploymentsrequest.h
  listdeploymentsrequest_p.h
  listdeploymentsresponse.h
  listdeploymentsresponse_p.h
  listdeploymentstrategiesrequest.h
  listdeploymentstrategiesrequest_p.h
  listdeploymentstrategiesresponse.h
  listdeploymentstrategiesresponse_p.h
  listenvironmentsrequest.h
  listenvironmentsrequest_p.h
  listenvironmentsresponse.h
  listenvironmentsresponse_p.h
  listhostedconfigurationversionsrequest.h
  listhostedconfigurationversionsrequest_p.h
  listhostedconfigurationversionsresponse.h
  listhostedconfigurationversionsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  startdeploymentrequest.h
  startdeploymentrequest_p.h
  startdeploymentresponse.h
  startdeploymentresponse_p.h
  stopdeploymentrequest.h
  stopdeploymentrequest_p.h
  stopdeploymentresponse.h
  stopdeploymentresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapplicationrequest.h
  updateapplicationrequest_p.h
  updateapplicationresponse.h
  updateapplicationresponse_p.h
  updateconfigurationprofilerequest.h
  updateconfigurationprofilerequest_p.h
  updateconfigurationprofileresponse.h
  updateconfigurationprofileresponse_p.h
  updatedeploymentstrategyrequest.h
  updatedeploymentstrategyrequest_p.h
  updatedeploymentstrategyresponse.h
  updatedeploymentstrategyresponse_p.h
  updateenvironmentrequest.h
  updateenvironmentrequest_p.h
  updateenvironmentresponse.h
  updateenvironmentresponse_p.h
  validateconfigurationrequest.h
  validateconfigurationrequest_p.h
  validateconfigurationresponse.h
  validateconfigurationresponse_p.h
  appconfigclient.cpp
  appconfigrequest.cpp
  appconfigresponse.cpp
  createapplicationrequest.cpp
  createapplicationresponse.cpp
  createconfigurationprofilerequest.cpp
  createconfigurationprofileresponse.cpp
  createdeploymentstrategyrequest.cpp
  createdeploymentstrategyresponse.cpp
  createenvironmentrequest.cpp
  createenvironmentresponse.cpp
  createhostedconfigurationversionrequest.cpp
  createhostedconfigurationversionresponse.cpp
  deleteapplicationrequest.cpp
  deleteapplicationresponse.cpp
  deleteconfigurationprofilerequest.cpp
  deleteconfigurationprofileresponse.cpp
  deletedeploymentstrategyrequest.cpp
  deletedeploymentstrategyresponse.cpp
  deleteenvironmentrequest.cpp
  deleteenvironmentresponse.cpp
  deletehostedconfigurationversionrequest.cpp
  deletehostedconfigurationversionresponse.cpp
  getapplicationrequest.cpp
  getapplicationresponse.cpp
  getconfigurationprofilerequest.cpp
  getconfigurationprofileresponse.cpp
  getconfigurationrequest.cpp
  getconfigurationresponse.cpp
  getdeploymentrequest.cpp
  getdeploymentresponse.cpp
  getdeploymentstrategyrequest.cpp
  getdeploymentstrategyresponse.cpp
  getenvironmentrequest.cpp
  getenvironmentresponse.cpp
  gethostedconfigurationversionrequest.cpp
  gethostedconfigurationversionresponse.cpp
  listapplicationsrequest.cpp
  listapplicationsresponse.cpp
  listconfigurationprofilesrequest.cpp
  listconfigurationprofilesresponse.cpp
  listdeploymentsrequest.cpp
  listdeploymentsresponse.cpp
  listdeploymentstrategiesrequest.cpp
  listdeploymentstrategiesresponse.cpp
  listenvironmentsrequest.cpp
  listenvironmentsresponse.cpp
  listhostedconfigurationversionsrequest.cpp
  listhostedconfigurationversionsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  startdeploymentrequest.cpp
  startdeploymentresponse.cpp
  stopdeploymentrequest.cpp
  stopdeploymentresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapplicationrequest.cpp
  updateapplicationresponse.cpp
  updateconfigurationprofilerequest.cpp
  updateconfigurationprofileresponse.cpp
  updatedeploymentstrategyrequest.cpp
  updatedeploymentstrategyresponse.cpp
  updateenvironmentrequest.cpp
  updateenvironmentresponse.cpp
  validateconfigurationrequest.cpp
  validateconfigurationresponse.cpp)

add_dependencies(QtAwsAppConfig QtAwsCore)

target_link_libraries(QtAwsAppConfig PRIVATE Qt5::Core Qt5::Network)
