add_compile_definitions(QTAWSAPPCONFIG_LIBRARY)

add_library(QtAwsAppConfig
  qtawsappconfigglobal.h
  appconfigclient.h
  appconfigclient_p.h
  appconfigrequest.h
  appconfigrequest_p.h
  appconfigresponse.h
  appconfigresponse_p.h
  createapplicationrequest.h
  createapplicationrequest_p.h
  createapplicationresponse.h
  createapplicationresponse_p.h
  createconfigurationprofilerequest.h
  createconfigurationprofilerequest_p.h
  createconfigurationprofileresponse.h
  createconfigurationprofileresponse_p.h
  createdeploymentstrategyrequest.h
  createdeploymentstrategyrequest_p.h
  createdeploymentstrategyresponse.h
  createdeploymentstrategyresponse_p.h
  createenvironmentrequest.h
  createenvironmentrequest_p.h
  createenvironmentresponse.h
  createenvironmentresponse_p.h
  createextensionrequest.h
  createextensionrequest_p.h
  createextensionresponse.h
  createextensionresponse_p.h
  createextensionassociationrequest.h
  createextensionassociationrequest_p.h
  createextensionassociationresponse.h
  createextensionassociationresponse_p.h
  createhostedconfigurationversionrequest.h
  createhostedconfigurationversionrequest_p.h
  createhostedconfigurationversionresponse.h
  createhostedconfigurationversionresponse_p.h
  deleteapplicationrequest.h
  deleteapplicationrequest_p.h
  deleteapplicationresponse.h
  deleteapplicationresponse_p.h
  deleteconfigurationprofilerequest.h
  deleteconfigurationprofilerequest_p.h
  deleteconfigurationprofileresponse.h
  deleteconfigurationprofileresponse_p.h
  deletedeploymentstrategyrequest.h
  deletedeploymentstrategyrequest_p.h
  deletedeploymentstrategyresponse.h
  deletedeploymentstrategyresponse_p.h
  deleteenvironmentrequest.h
  deleteenvironmentrequest_p.h
  deleteenvironmentresponse.h
  deleteenvironmentresponse_p.h
  deleteextensionrequest.h
  deleteextensionrequest_p.h
  deleteextensionresponse.h
  deleteextensionresponse_p.h
  deleteextensionassociationrequest.h
  deleteextensionassociationrequest_p.h
  deleteextensionassociationresponse.h
  deleteextensionassociationresponse_p.h
  deletehostedconfigurationversionrequest.h
  deletehostedconfigurationversionrequest_p.h
  deletehostedconfigurationversionresponse.h
  deletehostedconfigurationversionresponse_p.h
  getapplicationrequest.h
  getapplicationrequest_p.h
  getapplicationresponse.h
  getapplicationresponse_p.h
  getconfigurationrequest.h
  getconfigurationrequest_p.h
  getconfigurationresponse.h
  getconfigurationresponse_p.h
  getconfigurationprofilerequest.h
  getconfigurationprofilerequest_p.h
  getconfigurationprofileresponse.h
  getconfigurationprofileresponse_p.h
  getdeploymentrequest.h
  getdeploymentrequest_p.h
  getdeploymentresponse.h
  getdeploymentresponse_p.h
  getdeploymentstrategyrequest.h
  getdeploymentstrategyrequest_p.h
  getdeploymentstrategyresponse.h
  getdeploymentstrategyresponse_p.h
  getenvironmentrequest.h
  getenvironmentrequest_p.h
  getenvironmentresponse.h
  getenvironmentresponse_p.h
  getextensionrequest.h
  getextensionrequest_p.h
  getextensionresponse.h
  getextensionresponse_p.h
  getextensionassociationrequest.h
  getextensionassociationrequest_p.h
  getextensionassociationresponse.h
  getextensionassociationresponse_p.h
  gethostedconfigurationversionrequest.h
  gethostedconfigurationversionrequest_p.h
  gethostedconfigurationversionresponse.h
  gethostedconfigurationversionresponse_p.h
  listapplicationsrequest.h
  listapplicationsrequest_p.h
  listapplicationsresponse.h
  listapplicationsresponse_p.h
  listconfigurationprofilesrequest.h
  listconfigurationprofilesrequest_p.h
  listconfigurationprofilesresponse.h
  listconfigurationprofilesresponse_p.h
  listdeploymentstrategiesrequest.h
  listdeploymentstrategiesrequest_p.h
  listdeploymentstrategiesresponse.h
  listdeploymentstrategiesresponse_p.h
  listdeploymentsrequest.h
  listdeploymentsrequest_p.h
  listdeploymentsresponse.h
  listdeploymentsresponse_p.h
  listenvironmentsrequest.h
  listenvironmentsrequest_p.h
  listenvironmentsresponse.h
  listenvironmentsresponse_p.h
  listextensionassociationsrequest.h
  listextensionassociationsrequest_p.h
  listextensionassociationsresponse.h
  listextensionassociationsresponse_p.h
  listextensionsrequest.h
  listextensionsrequest_p.h
  listextensionsresponse.h
  listextensionsresponse_p.h
  listhostedconfigurationversionsrequest.h
  listhostedconfigurationversionsrequest_p.h
  listhostedconfigurationversionsresponse.h
  listhostedconfigurationversionsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  startdeploymentrequest.h
  startdeploymentrequest_p.h
  startdeploymentresponse.h
  startdeploymentresponse_p.h
  stopdeploymentrequest.h
  stopdeploymentrequest_p.h
  stopdeploymentresponse.h
  stopdeploymentresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapplicationrequest.h
  updateapplicationrequest_p.h
  updateapplicationresponse.h
  updateapplicationresponse_p.h
  updateconfigurationprofilerequest.h
  updateconfigurationprofilerequest_p.h
  updateconfigurationprofileresponse.h
  updateconfigurationprofileresponse_p.h
  updatedeploymentstrategyrequest.h
  updatedeploymentstrategyrequest_p.h
  updatedeploymentstrategyresponse.h
  updatedeploymentstrategyresponse_p.h
  updateenvironmentrequest.h
  updateenvironmentrequest_p.h
  updateenvironmentresponse.h
  updateenvironmentresponse_p.h
  updateextensionrequest.h
  updateextensionrequest_p.h
  updateextensionresponse.h
  updateextensionresponse_p.h
  updateextensionassociationrequest.h
  updateextensionassociationrequest_p.h
  updateextensionassociationresponse.h
  updateextensionassociationresponse_p.h
  validateconfigurationrequest.h
  validateconfigurationrequest_p.h
  validateconfigurationresponse.h
  validateconfigurationresponse_p.h
  appconfigclient.cpp
  appconfigrequest.cpp
  appconfigresponse.cpp
  createapplicationrequest.cpp
  createapplicationresponse.cpp
  createconfigurationprofilerequest.cpp
  createconfigurationprofileresponse.cpp
  createdeploymentstrategyrequest.cpp
  createdeploymentstrategyresponse.cpp
  createenvironmentrequest.cpp
  createenvironmentresponse.cpp
  createextensionrequest.cpp
  createextensionresponse.cpp
  createextensionassociationrequest.cpp
  createextensionassociationresponse.cpp
  createhostedconfigurationversionrequest.cpp
  createhostedconfigurationversionresponse.cpp
  deleteapplicationrequest.cpp
  deleteapplicationresponse.cpp
  deleteconfigurationprofilerequest.cpp
  deleteconfigurationprofileresponse.cpp
  deletedeploymentstrategyrequest.cpp
  deletedeploymentstrategyresponse.cpp
  deleteenvironmentrequest.cpp
  deleteenvironmentresponse.cpp
  deleteextensionrequest.cpp
  deleteextensionresponse.cpp
  deleteextensionassociationrequest.cpp
  deleteextensionassociationresponse.cpp
  deletehostedconfigurationversionrequest.cpp
  deletehostedconfigurationversionresponse.cpp
  getapplicationrequest.cpp
  getapplicationresponse.cpp
  getconfigurationrequest.cpp
  getconfigurationresponse.cpp
  getconfigurationprofilerequest.cpp
  getconfigurationprofileresponse.cpp
  getdeploymentrequest.cpp
  getdeploymentresponse.cpp
  getdeploymentstrategyrequest.cpp
  getdeploymentstrategyresponse.cpp
  getenvironmentrequest.cpp
  getenvironmentresponse.cpp
  getextensionrequest.cpp
  getextensionresponse.cpp
  getextensionassociationrequest.cpp
  getextensionassociationresponse.cpp
  gethostedconfigurationversionrequest.cpp
  gethostedconfigurationversionresponse.cpp
  listapplicationsrequest.cpp
  listapplicationsresponse.cpp
  listconfigurationprofilesrequest.cpp
  listconfigurationprofilesresponse.cpp
  listdeploymentstrategiesrequest.cpp
  listdeploymentstrategiesresponse.cpp
  listdeploymentsrequest.cpp
  listdeploymentsresponse.cpp
  listenvironmentsrequest.cpp
  listenvironmentsresponse.cpp
  listextensionassociationsrequest.cpp
  listextensionassociationsresponse.cpp
  listextensionsrequest.cpp
  listextensionsresponse.cpp
  listhostedconfigurationversionsrequest.cpp
  listhostedconfigurationversionsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  startdeploymentrequest.cpp
  startdeploymentresponse.cpp
  stopdeploymentrequest.cpp
  stopdeploymentresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapplicationrequest.cpp
  updateapplicationresponse.cpp
  updateconfigurationprofilerequest.cpp
  updateconfigurationprofileresponse.cpp
  updatedeploymentstrategyrequest.cpp
  updatedeploymentstrategyresponse.cpp
  updateenvironmentrequest.cpp
  updateenvironmentresponse.cpp
  updateextensionrequest.cpp
  updateextensionresponse.cpp
  updateextensionassociationrequest.cpp
  updateextensionassociationresponse.cpp
  validateconfigurationrequest.cpp
  validateconfigurationresponse.cpp)

target_link_libraries(QtAwsAppConfig
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
