add_library(QtAwsAppflow
  appflowclient.h
  appflowclient_p.h
  appflowrequest.h
  appflowrequest_p.h
  appflowresponse.h
  appflowresponse_p.h
  createconnectorprofilerequest.h
  createconnectorprofilerequest_p.h
  createconnectorprofileresponse.h
  createconnectorprofileresponse_p.h
  createflowrequest.h
  createflowrequest_p.h
  createflowresponse.h
  createflowresponse_p.h
  deleteconnectorprofilerequest.h
  deleteconnectorprofilerequest_p.h
  deleteconnectorprofileresponse.h
  deleteconnectorprofileresponse_p.h
  deleteflowrequest.h
  deleteflowrequest_p.h
  deleteflowresponse.h
  deleteflowresponse_p.h
  describeconnectorentityrequest.h
  describeconnectorentityrequest_p.h
  describeconnectorentityresponse.h
  describeconnectorentityresponse_p.h
  describeconnectorprofilesrequest.h
  describeconnectorprofilesrequest_p.h
  describeconnectorprofilesresponse.h
  describeconnectorprofilesresponse_p.h
  describeconnectorsrequest.h
  describeconnectorsrequest_p.h
  describeconnectorsresponse.h
  describeconnectorsresponse_p.h
  describeflowexecutionrecordsrequest.h
  describeflowexecutionrecordsrequest_p.h
  describeflowexecutionrecordsresponse.h
  describeflowexecutionrecordsresponse_p.h
  describeflowrequest.h
  describeflowrequest_p.h
  describeflowresponse.h
  describeflowresponse_p.h
  listconnectorentitiesrequest.h
  listconnectorentitiesrequest_p.h
  listconnectorentitiesresponse.h
  listconnectorentitiesresponse_p.h
  listflowsrequest.h
  listflowsrequest_p.h
  listflowsresponse.h
  listflowsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  startflowrequest.h
  startflowrequest_p.h
  startflowresponse.h
  startflowresponse_p.h
  stopflowrequest.h
  stopflowrequest_p.h
  stopflowresponse.h
  stopflowresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateconnectorprofilerequest.h
  updateconnectorprofilerequest_p.h
  updateconnectorprofileresponse.h
  updateconnectorprofileresponse_p.h
  updateflowrequest.h
  updateflowrequest_p.h
  updateflowresponse.h
  updateflowresponse_p.h
  appflowclient.cpp
  appflowrequest.cpp
  appflowresponse.cpp
  createconnectorprofilerequest.cpp
  createconnectorprofileresponse.cpp
  createflowrequest.cpp
  createflowresponse.cpp
  deleteconnectorprofilerequest.cpp
  deleteconnectorprofileresponse.cpp
  deleteflowrequest.cpp
  deleteflowresponse.cpp
  describeconnectorentityrequest.cpp
  describeconnectorentityresponse.cpp
  describeconnectorprofilesrequest.cpp
  describeconnectorprofilesresponse.cpp
  describeconnectorsrequest.cpp
  describeconnectorsresponse.cpp
  describeflowexecutionrecordsrequest.cpp
  describeflowexecutionrecordsresponse.cpp
  describeflowrequest.cpp
  describeflowresponse.cpp
  listconnectorentitiesrequest.cpp
  listconnectorentitiesresponse.cpp
  listflowsrequest.cpp
  listflowsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  startflowrequest.cpp
  startflowresponse.cpp
  stopflowrequest.cpp
  stopflowresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateconnectorprofilerequest.cpp
  updateconnectorprofileresponse.cpp
  updateflowrequest.cpp
  updateflowresponse.cpp)

target_link_libraries(QtAwsAppflow
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
