add_compile_definitions(QTAWSAPPINTEGRATIONS_LIBRARY)

add_library(QtAwsAppIntegrations
  qtawsappintegrationsglobal.h
  appintegrationsclient.h
  appintegrationsclient_p.h
  appintegrationsrequest.h
  appintegrationsrequest_p.h
  appintegrationsresponse.h
  appintegrationsresponse_p.h
  createdataintegrationrequest.h
  createdataintegrationrequest_p.h
  createdataintegrationresponse.h
  createdataintegrationresponse_p.h
  createeventintegrationrequest.h
  createeventintegrationrequest_p.h
  createeventintegrationresponse.h
  createeventintegrationresponse_p.h
  deletedataintegrationrequest.h
  deletedataintegrationrequest_p.h
  deletedataintegrationresponse.h
  deletedataintegrationresponse_p.h
  deleteeventintegrationrequest.h
  deleteeventintegrationrequest_p.h
  deleteeventintegrationresponse.h
  deleteeventintegrationresponse_p.h
  getdataintegrationrequest.h
  getdataintegrationrequest_p.h
  getdataintegrationresponse.h
  getdataintegrationresponse_p.h
  geteventintegrationrequest.h
  geteventintegrationrequest_p.h
  geteventintegrationresponse.h
  geteventintegrationresponse_p.h
  listdataintegrationassociationsrequest.h
  listdataintegrationassociationsrequest_p.h
  listdataintegrationassociationsresponse.h
  listdataintegrationassociationsresponse_p.h
  listdataintegrationsrequest.h
  listdataintegrationsrequest_p.h
  listdataintegrationsresponse.h
  listdataintegrationsresponse_p.h
  listeventintegrationassociationsrequest.h
  listeventintegrationassociationsrequest_p.h
  listeventintegrationassociationsresponse.h
  listeventintegrationassociationsresponse_p.h
  listeventintegrationsrequest.h
  listeventintegrationsrequest_p.h
  listeventintegrationsresponse.h
  listeventintegrationsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updatedataintegrationrequest.h
  updatedataintegrationrequest_p.h
  updatedataintegrationresponse.h
  updatedataintegrationresponse_p.h
  updateeventintegrationrequest.h
  updateeventintegrationrequest_p.h
  updateeventintegrationresponse.h
  updateeventintegrationresponse_p.h
  appintegrationsclient.cpp
  appintegrationsrequest.cpp
  appintegrationsresponse.cpp
  createdataintegrationrequest.cpp
  createdataintegrationresponse.cpp
  createeventintegrationrequest.cpp
  createeventintegrationresponse.cpp
  deletedataintegrationrequest.cpp
  deletedataintegrationresponse.cpp
  deleteeventintegrationrequest.cpp
  deleteeventintegrationresponse.cpp
  getdataintegrationrequest.cpp
  getdataintegrationresponse.cpp
  geteventintegrationrequest.cpp
  geteventintegrationresponse.cpp
  listdataintegrationassociationsrequest.cpp
  listdataintegrationassociationsresponse.cpp
  listdataintegrationsrequest.cpp
  listdataintegrationsresponse.cpp
  listeventintegrationassociationsrequest.cpp
  listeventintegrationassociationsresponse.cpp
  listeventintegrationsrequest.cpp
  listeventintegrationsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updatedataintegrationrequest.cpp
  updatedataintegrationresponse.cpp
  updateeventintegrationrequest.cpp
  updateeventintegrationresponse.cpp)

target_link_libraries(QtAwsAppIntegrations
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
